--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "mocha --timeout 5000",
+    "test2": "mocha --timeout 5000 --reporter mochawesome"
   },
   "dependencies": {
     "next": "12.0.8",
@@ -17,6 +19,16 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.10",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.16.9",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.4",
+    "mochawesome": "^7.0.1",
+    "supertest": "^6.2.2"
   }
 }
