--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint-fix": "eslint . --fix",
     "test": "mocha --timeout 5000",
     "test2": "mocha --timeout 5000 --reporter mochawesome"
   },
@@ -15,20 +16,24 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15",
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.10",
     "@babel/node": "^7.16.8",
     "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.16.9",
+    "@next/eslint-plugin-next": "^12.0.8",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.2",
     "chai": "^4.3.4",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
     "mocha": "^9.1.4",
     "mochawesome": "^7.0.1",
-    "supertest": "^6.2.2"
+    "postcss": "^8.4.5",
+    "supertest": "^6.2.2",
+    "tailwindcss": "^3.0.15"
   }
 }
