--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.10",
     "@babel/node": "^7.16.8",
+    "@babel/plugin-syntax-jsx": "^7.16.7",
     "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@babel/register": "^7.16.9",
     "@next/eslint-plugin-next": "^12.0.8",
     "@testing-library/jest-dom": "^5.16.1",
