--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.10",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/node": "^7.16.8",
     "@babel/plugin-syntax-jsx": "^7.16.7",
     "@babel/plugin-transform-runtime": "^7.16.10",
@@ -30,11 +31,19 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.2",
     "chai": "^4.3.4",
-    "eslint": "8.7.0",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "mocha": "^9.1.4",
     "mochawesome": "^7.0.1",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
     "supertest": "^6.2.2",
     "tailwindcss": "^3.0.15"
   }
