--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test2": "mocha --timeout 5000 --reporter mochawesome"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.18.5",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
